--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,10 @@
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .login-box{
   display: flex;
   justify-content: center;
